# scr2veloc

./: CMakeLists.txt  README.md
cmake/: FindKVTree.cmake  FindVELOC.cmake
examples/: CMakeLists.txt  makefile.examples.in
src/: CMakeLists.txt  scr2veloc.c
